@@ -1,5 +1,5 @@
 /*
- * $Id: cnid_close.c,v 1.22 2002-02-01 19:51:09 jmarcus Exp $
+ * $Id: cnid_close.c,v 1.23 2002-05-29 18:02:59 jmarcus Exp $
  */
 
 #ifdef HAVE_CONFIG_H
@@ -75,6 +75,9 @@ void cnid_close(void *CNID) {
     db->db_didname->close(db->db_didname, 0);
     db->db_devino->close(db->db_devino, 0);
     db->db_cnid->close(db->db_cnid, 0);
+#ifdef FILE_MANGLING
+    db->db_mangle->close(db->db_mangle, 0);
+#endif /* FILE_MANGLING */
     db->dbenv->close(db->dbenv, 0);
 
     if (db->lockfd > -1) {
